<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/data_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:hint="Enter Data"></EditText>

    <EditText
        android:id="@+id/description_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/data_txtvw"
        android:layout_centerInParent="true"
        android:hint="Enter Description"></EditText>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send Data"
        android:textAllCaps="false"
        android:layout_below="@id/description_txtvw"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        >
    </androidx.appcompat.widget.AppCompatButton>

</RelativeLayout>